# quoridor_ai

./: .gitignore  Cargo.toml  README.md
.github/actions/dependencies/: action.yml
.github/workflows/: rust.yml  rust_checks.yml
evolution_training/: Cargo.toml
evolution_training/src/: benchmark.rs  error.rs  lib.rs  logging.rs  main.rs  settings.rs  training_environment.rs  visualization.rs
evolution_training/src/evolution/: agent.rs  generation.rs  mod.rs  selection.rs
evolution_training/src/game_adapter/: board_encoder.rs  mod.rs  move_decoder.rs  reward.rs
matrix/: Cargo.toml
matrix/src/: error.rs  matrix.rs
neural_network/: Cargo.toml
neural_network/src/: activation.rs  error.rs  lib.rs  neural_network.rs
neural_network_logger/: Cargo.toml
neural_network_logger/src/: error.rs  lib.rs  logger.rs  models.rs  traits.rs
play_ai_game/: Cargo.toml
play_ai_game/src/: main.rs
quoridor/: Cargo.toml
quoridor/src/: direction.rs  game_state.rs  lib.rs  pawn.rs  vector.rs  wall.rs
render/: Cargo.toml
render/src/: board.rs  constants.rs  lib.rs  pawn.rs  tile.rs  wall.rs
src/: main.rs
src/game_logic/: error.rs  game_state.rs  mod.rs  pawn.rs  wall.rs
src/tests/: direction_tests.rs  mod.rs  vector_tests.rs
src/utils/: directions.rs  mod.rs  side.rs  vector.rs  vectors.rs
