[package]
name = "neural_network_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
neural_network = {path = "../neural_network"}
matrix = {path = "../matrix"}
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.8"